# pinocchio-never-nonce

./: Cargo.toml  Makefile  README.md
.github/actions/setup/: action.yml
.github/workflows/: main.yml
program/: Cargo.toml
program/src/: lib.rs
program/tests/: nonce.rs
