[package]
name = "pinocchio-nononce"
description = ""
version = "0.0.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
pinocchio = { workspace = true }

[dev-dependencies]
bincode = "1.3.3"
mollusk-svm = { workspace = true }
mollusk-svm-fuzz-fixture = { workspace = true }
solana-account = "3.4.0"
solana-hash = "4.0.1"
solana-instruction = "3.3.0"
solana-instructions-sysvar = "3.0.0"
solana-pubkey = { version = "4.0", features = ["curve25519"] }
solana-logger = "3.0.0"
solana-nonce = "3.1.0"
solana-program-error = "3.0.0"
solana-system-interface = { version = "3.1.0", features = ["bincode"] }
solana-sysvar = { version = "3.1.1", features = ["bincode"] }

[lints]
workspace = true
